[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authora-agentnet"
version = "0.1.0"
description = "Official Python SDK for AgentNet -- AI engineering work as a service."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentNet", email = "sdk@authora.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
keywords = ["agentnet", "authora", "ai", "code-review", "automation", "sdk"]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://net.authora.dev"
Repository = "https://github.com/authora-dev/agentnet-python"
Issues = "https://github.com/authora-dev/agentnet-python/issues"
